--- a/src/output.css
+++ b/src/output.css
@@ -598,6 +598,10 @@ video {
   position: sticky;
 }
 
+.mr-4 {
+  margin-right: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -618,12 +622,20 @@ video {
   height: 100vh;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .w-full {
   width: 100%;
 }
 
 .w-1 {
   width: 0.25rem;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .transform {
